# StockAnalyserAndPredictor

./: .gitignore  README.md  requirements.txt
.history/scripts/: main_20210606133409.py  model_comparison_20210606133647.py  model_comparison_20210606133846.py  model_create_predict_20210606133654.py  model_create_predict_20210606133713.py  model_create_predict_20210606133731.py  model_create_predict_20210606133828.py  model_create_predict_20210606134310.py  model_create_predict_20210606134318.py  model_create_predict_20210606134406.py  stock_scraper_20210606133700.py  stock_scraper_20210606133950.py  stock_scraper_20210606134004.py  stock_scraper_20210606134207.py
datasets/portfolio/: portfolio_analysed.csv  portfolio_backtest_methods.csv
datasets/validation/: AAPL-comparison-data-transposed.csv  ABNB-comparison-data-transposed.csv  AMZN-comparison-data-transposed.csv  BTC-USD-comparison-data-transposed.csv  DIA-comparison-data-transposed.csv  ENPH-comparison-data-transposed.csv  ETH-USD-comparison-data-transposed.csv  ETSY-comparison-data-transposed.csv  GME-comparison-data-transposed.csv  GOOG-comparison-data-transposed.csv  IBM-comparison-data-transposed.csv  IVV-comparison-data-transposed.csv  NIO-comparison-data-transposed.csv  PLTR-comparison-data-transposed.csv  TSLA-comparison-data-transposed.csv
frontend/: pyproject.toml
models/AAPL-days-100epochs/: keras_metadata.pb  saved_model.pb
models/AAPL-days-100epochs-extracol/: saved_model.pb
models/AAPL-mins-2epochs-extracol/: keras_metadata.pb  saved_model.pb
scripts/: main.py
(+700 files in other folders)
