[tool.poetry]
name = "FinancialDashboard"
version = "0.1.0"
description = ""
authors = ["Michael Cullen <michaelcullen2011@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
pandas = "^1.3.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
